[package]
name = "panoradix"
version = "0.6.2"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
description = "A generic map and a set, both backed by a Radix tree."
license = "MIT"
homepage = "https://github.com/jmcomets/panoradix"
repository = "https://github.com/jmcomets/panoradix"
documentation = "https://docs.rs/panoradix"
keywords = ["data-structure", "radix-tree"]
categories = ["data-structures"]

[dependencies]
clippy = {version = "0.0.131", optional = true}

[features]
default = []
